[gd_scene format=3 uid="uid://cgb226hqsuv23"]

[ext_resource type="Script" uid="uid://bfaexhaohh8qb" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://d2c1s3qmdi4ti" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://drx8gkc8yay1y" path="res://mob.tscn" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://cyfahs00irlc1" path="res://power_up.tscn" id="3_kek77"]
[ext_resource type="PackedScene" uid="uid://cvqvw7ypmtpn2" path="res://hud.tscn" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://cwk68hgxigmxd" path="res://sound/hi_score_sound.res" id="5_272bh"]
[ext_resource type="PackedScene" uid="uid://c5x73kled1iv2" path="res://sound/death_sound.res" id="7_5vw27"]
[ext_resource type="PackedScene" uid="uid://breo3aydhibvp" path="res://sound/mob_sound.res" id="8_kek77"]
[ext_resource type="PackedScene" uid="uid://bsx71yba2hjjs" path="res://sound/music.res" id="11_w48qg"]

[sub_resource type="Curve2D" id="Curve2D_0xm2m"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -2.0041666, 1.0055556, 0, 0, 0, 0, 718.99585, 5.0055556, 0, 0, 0, 0, 722.99585, 723.00555, 0, 0, 0, 0, 2.9958334, 722.00555, 0, 0, 0, 0, -2.0041666, 1.0055556)
}
point_count = 5

[node name="Main" type="Node" unique_id=194633038]
script = ExtResource("1_h2yge")
mob_scene = ExtResource("2_1bvp3")
power_up_scene = ExtResource("3_kek77")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1099265805]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.12941177, 1, 0.18039216)

[node name="Player" parent="." unique_id=1768488024 instance=ExtResource("1_ig7tw")]

[node name="MobTimer" type="Timer" parent="." unique_id=1520050741]
wait_time = 2.0

[node name="PowerUpEnabledTimer" type="Timer" parent="." unique_id=1279846590]
wait_time = 5.0
one_shot = true

[node name="ScoreTimer" type="Timer" parent="." unique_id=652989129]

[node name="StartTimer" type="Timer" parent="." unique_id=1589733087]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="." unique_id=1651284943]
position = Vector2(383, 523)

[node name="MobPath" type="Path2D" parent="." unique_id=1034993643]
position = Vector2(-0.9958334, -2.0055556)
curve = SubResource("Curve2D_0xm2m")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath" unique_id=1464376865]
position = Vector2(-2.0041666, 1.0055556)
rotation = 0.005547793

[node name="HUD" parent="." unique_id=1349355105 instance=ExtResource("4_1bvp3")]

[node name="Music" parent="." unique_id=1655940380 instance=ExtResource("11_w48qg")]

[node name="HiScoreSound" parent="." unique_id=1244523448 instance=ExtResource("5_272bh")]

[node name="DeathSound" parent="." unique_id=1713924736 instance=ExtResource("7_5vw27")]

[node name="MobSound" parent="." unique_id=707441255 instance=ExtResource("8_kek77")]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="player_bombed" from="Player" to="." method="screenflash"]
[connection signal="power_up_taken" from="Player" to="." method="_on_player_power_up_taken"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="PowerUpEnabledTimer" to="." method="_on_power_up_enabled_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
